More updates, fixes to GraalJS stylesheet